<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    
    <PreferenceCategory
            android:title="@string/account_preferences">

        <PreferenceScreen
            android:title="@string/user_profile"
            android:summary="@string/user_information">

            <intent android:action="android.intent.action.VIEW"
                android:targetPackage="@string/target_package"
                android:targetClass="@string/target_class"/>

        </PreferenceScreen>
            
        <CheckBoxPreference
                android:key="checkbox_preference"
                android:title="@string/privacy_setting"
                android:summary="@string/privacy_information" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/additional_settings">

        <ListPreference
            android:key="list_preference"
            android:title="@string/unit_preference"
            android:summary="@string/unit_information"
            android:entries="@array/unit_array"
            android:entryValues="@array/unit_array_value"
            android:dialogTitle="@string/unit_preference" />

        <EditTextPreference
            android:key="edittext_preference"
            android:title="@string/comments"
            android:summary="@string/comments_information"
            android:dialogTitle="@string/comments" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/misc">
        <PreferenceScreen
            android:title="@string/webpage"
            android:summary="@string/webpage_information">

            <intent android:action="android.intent.action.VIEW"
                android:data="http://www.cs.dartmouth.edu/" />

        </PreferenceScreen>

    </PreferenceCategory>
    
</PreferenceScreen>
