<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"

            tools:context="com.example.illyria.myruns.MainActivity">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Profile Photo:" />


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_below="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false">

                <ImageView
                    android:id="@+id/profile_photo"
                    android:layout_width="0dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/profile_photo_content_description"
                    android:focusable="true"
                    android:focusableInTouchMode="true" />

                <Button
                    android:id="@+id/change"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:onClick="onChangePhotoClicked"
                    android:text="Change" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/linearLayout2"
                android:layout_marginTop="4dp"
                android:orientation="vertical"
                android:weightSum="1"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Name" />

                <EditText
                    android:id="@+id/your_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/your_name" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Email" />

                <EditText
                    android:id="@+id/your_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:imeOptions="actionNext"
                    android:hint="@string/your_email" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Phone" />

                <EditText
                    android:id="@+id/your_phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/your_phone_number" />
                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:text="Gender" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="0">

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="Female" />

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Male"
                        android:layout_weight="0.5" />

                </RadioGroup>

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Class" />

                <EditText
                    android:id="@+id/class_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/class_year" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="Major" />

                <EditText
                    android:id="@+id/your_major"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/your_major" />



                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="1"
                    android:layout_marginTop="20dp"
                    android:layout_weight="0.19"
                    android:layout_marginBottom="10dp">

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Save"
                        android:id="@+id/save"
                        android:layout_weight="0.34"
                        android:onClick="onSaveClicked"
                        android:layout_marginLeft="60dp" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Cancel"
                        android:id="@+id/cancel"
                        android:layout_weight="0.34"
                        android:onClick="onCancelClicked"
                        android:layout_marginRight="20dp" />
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
</ScrollView>